--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </p>
 <table  id="mytable" class="table table-bordered table-hover ">
   <tr>
-    <th>Nobmre</th>
+    <th>Nombre20</th>
     <th>Apellidos</th>
     <th>C&eacute;dula</th>
     <th>Eliminar</th>
