--- a/index.html
+++ b/index.html
@@ -1,40 +1,52 @@
+<head>
+  <title>Sen</title>
+  <meta charset="utf-8">
+  <meta name="viewport"   content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie-edge">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+</head>
 <body>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<div class="container">
-  <form>
-   <div class="form-group">
-    <p>
-      <label>Entre su Nombre:</label> <br>
-      <input id="nombre" class="form-control" type="text" placeholder="Nombre..."><br>
-    </p>
-    <p>
-      <label>Entre su Apellido:</label> <br>
-      <input id="apellido" class="form-control" type="text" placeholder="Apellido..."><br>
-    </p>
-    <p>
-      <label>Entre su C&eacute;dula:</label> <br>
-      <input id="cedula" class="form-control" type="text" placeholder="Cedúla"> <br>
-    </p>
-    <button id="adicionar" class="btn btn-success" type="button">Adicionar a la tabla</button>
+  <!---------------------------------Empieza el contenido-------------------------------->
+  <h1></h1>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+
+
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <a href="#" class="navbar-brand"><img src="img/isaac.png" style="width: 120px;"></a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#uno">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="uno">
+
+            <ul class="navbar-nav">   
+              <li class="nav-item"><a href="#" class="nav-link btn-danger">Home?</a></li>
+              <li class="nav-item"><a href="https://codepen.io/kloulord/full/ExYWBOp" class="nav-link btn-danger">Tabla JS</a></li>
+              <li class="nav-item"><a href="C:\Users\No Importa\Documents\Curso\Proyecto\CV\cvo.html" class="nav-link btn-danger">CV HTML</a></li>
+              <li class="nav-item dropdown"><a href="#" class="nav-link dropdown-toggle btn-danger" data-toggle="dropdown">link 4</a>
+                <div class="dropdown-menu">
+                  <a href="#" class="dropdown-item">submenu 1</a>
+                  <a href="#" class="dropdown-item">submenu 2</a>
+                  <a href="#" class="dropdown-item">submenu 3</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+      </div>
+    </div>
   </div>
-</form>
-<input type="button" onclick="tableToExcel('mytable', 'Cualquier nombre')" value="Export to Excel">
-<p>Elementos en la Tabla:
-  <div id="adicionados"></div>
-</p>
-<table  id="mytable" class="table table-bordered table-hover ">
-  <tr>
-    <th>Nombre20</th>
-    <th>Apellidos</th>
-    <th>C&eacute;dula</th>
-    <th>Eliminar</th>
 
-  </tr>
-</table>
-
-</div>
-<script>
-
-</script>
+  <!---------------------------------Termina el contenido-------------------------------->
+  <script src="js/jquery-3.3.1.slim.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
+</html>
+
+<!--lINK del video mas completo en español https://www.youtube.com/watch?v=-83eiJ9EaD4&t=6861s-->
