--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="navbar-nav">   
               <li class="nav-item"><a href="#" class="nav-link btn-danger">Home?</a></li>
               <li class="nav-item"><a href="https://codepen.io/kloulord/full/ExYWBOp" class="nav-link btn-danger">Tabla JS</a></li>
-              <li class="nav-item"><a href="C:\Users\No Importa\Documents\Curso\Proyecto\CV\cvo.html" class="nav-link btn-danger">CV HTML</a></li>
+              <li class="nav-item active"><a href="cvo.html" class="nav-link btn-danger">CV HTML</a></li>
               <li class="nav-item dropdown"><a href="#" class="nav-link dropdown-toggle btn-danger" data-toggle="dropdown">link 4</a>
                 <div class="dropdown-menu">
                   <a href="#" class="dropdown-item">submenu 1</a>
